--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 
 <center>
     <div class="footer_part" style=" margin: auto; display: block; margin-top: 50px;">
-        <button class="part" style="display: inline-block;" onclick="urban()">URBAN CASE </button>
-        <button class="part" style="display: inline-block;" onclick="royal()">ROYAL CASE </button>
+        <button class="part" style="display: inline-block;" onclick="urban()">المنتجات</button>
+        <!-- <button class="part" style="display: inline-block;" onclick="royal()">ROYAL CASE </button>
         <button class="part" style="display: inline-block;" onclick="titaum()">TITANUM CASE </button>
         <button class="part" style="display: inline-block;" onclick="glassP()">PVC Glass</button>
         <button class="part" style="display: inline-block;" onclick="glassO()">Full Glass</button>
         <button class="part" style="display: inline-block;" onclick="glassD()">2.5 D Glass</button>
-        
+         -->
     </div>
 </center>
 
-<form action="">
+<form action="https://formspree.io/f/xzbnaogo" method="post">
     <div id="urban_case">
         <table border="1px">
             <thead>
@@ -30,84 +30,108 @@
             </thead>
             <tbody>
                 <tr>
-                    <td class="left"><input type="text" value="URBAN iphone 15 ProMax" style="width: 90%;"></td>
-                    <td class="right"><input type="text" value="0x" style="margin: auto; text-align: center; width: 90%;" style="margin: auto; text-align: center;"></td>
+                    <td class="left"><input type="text" value="RS iso zero protein 33g 1.8kg" style="width: 90%;" name="product_1"></td>
+                    <td class="right"><input type="text" value="₪" style="margin: auto; text-align: center; width: 90%;" style="margin: auto; text-align: center;" name="price_1"></td>
                 </tr>
                 <tr>
-                    <td class="left"><input type="text" value="URBAN iphone 15 PRO" style="width: 90%;"></td>
-                    <td class="right"><input type="text" value="0x" style="margin: auto; text-align: center; width: 90%;"></td>
+                    <td class="left"><input type="text" value="RS whey protein 25g 1.8kg" style="width: 90%;" name="product_2"></td>
+                    <td class="right"><input type="text" value="₪" style="margin: auto; text-align: center; width: 90%;" name="price_2"></td>
                 </tr>
                 <tr>
-                    <td class="left"><input type="text" value="URBAN iphone 15" style="width: 90%;"></td>
-                    <td class="right"><input type="text" value="0x" style="margin: auto; text-align: center; width: 90%;"></td>
+                    <td class="left"><input type="text" value="RS - Karbolyn" style="width: 90%;" name="product_3"></td>
+                    <td class="right"><input type="text" value="₪" style="margin: auto; text-align: center; width: 90%;" name="price_3"></td>
                 </tr>
                 <tr>
-                    <td class="left"><input type="text" value="URBAN iphone 14 ProMax" style="width: 90%;"></td>
-                    <td class="right"><input type="text" value="0x" style="margin: auto; text-align: center; width: 90%;"></td>
+                    <td class="left"><input type="text" value="L-CARNITINE" style="width: 90%;" name="product_4"></td>
+                    <td class="right"><input type="text" value="₪" style="margin: auto; text-align: center; width: 90%;" name="price_4"></td>
                 </tr>
                 <tr>
-                    <td class="left"><input type="text" value="URBAN iphone 14 PRO" style="width: 90%;"></td>
-                    <td class="right"><input type="text" value="0x" style="margin: auto; text-align: center; width: 90%;"></td>
+                    <td class="left"><input type="text" value="RS - ZINC" style="width: 90%;" name="product_5"></td>
+                    <td class="right"><input type="text" value="₪" style="margin: auto; text-align: center; width: 90%;" name="price_5"></td>
                 </tr>
                 <tr>
-                    <td class="left"><input type="text" value="URBAN iphone 14" style="width: 90%;"></td>
-                    <td class="right"><input type="text" value="0x" style="margin: auto; text-align: center; width: 90%;"></td>
+                    <td class="left"><input type="text" value="RS - Magnesium" style="width: 90%;" name="product_6"></td>
+                    <td class="right"><input type="text" value="₪" style="margin: auto; text-align: center; width: 90%;" name="price_6"></td>
                 </tr>
                 <tr>
-                    <td class="left"><input type="text" value="URBAN iphone 13 ProMax" style="width: 90%;"></td>
-                    <td class="right"><input type="text" value="0x" style="margin: auto; text-align: center; width: 90%;"></td>
+                    <td class="left"><input type="text" value="RS - Apple Vinegar" style="width: 90%;" name="product_7"></td>
+                    <td class="right"><input type="text" value="₪" style="margin: auto; text-align: center; width: 90%;" name="price_7"></td>
                 </tr>
                 <tr>
-                    <td class="left"><input type="text" value="URBAN iphone 13 PRO" style="width: 90%;"></td>
-                    <td class="right"><input type="text" value="0x" style="margin: auto; text-align: center; width: 90%;"></td>
+                    <td class="left"><input type="text" value="RS - B-Complex" style="width: 90%;" name="product_8"></td>
+                    <td class="right"><input type="text" value="₪" style="margin: auto; text-align: center; width: 90%;" name="price_8"></td>
                 </tr>
                 <tr>
-                    <td class="left"><input type="text" value="URBAN iphone 13" style="width: 90%;"></td>
-                    <td class="right"><input type="text" value="0x" style="margin: auto; text-align: center; width: 90%;"></td>
+                    <td class="left"><input type="text" value="RS - Lipozen" style="width: 90%;" name="product_9"></td>
+                    <td class="right"><input type="text" value="₪" style="margin: auto; text-align: center; width: 90%;" name="price_9"></td>
                 </tr>
                 <tr>
-                    <td class="left"><input type="text" value="URBAN iphone 12 ProMax" style="width: 90%;"></td>
-                    <td class="right"><input type="text" value="0x" style="margin: auto; text-align: center; width: 90%;"></td>
+                    <td class="left"><input type="text" value="RS - Spirulina" style="width: 90%;" name="product_10"></td>
+                    <td class="right"><input type="text" value="₪" style="margin: auto; text-align: center; width: 90%;" name="price_10"></td>
                 </tr>
                 <tr>
-                    <td class="left"><input type="text" value="URBAN iphone 12 PRO" style="width: 90%;"></td>
-                    <td class="right"><input type="text" value="0x" style="margin: auto; text-align: center; width: 90%;"></td>
+                    <td class="left"><input type="text" value="RS - ZMA Plus" style="width: 90%;" name="product_11"></td>
+                    <td class="right"><input type="text" value="₪" style="margin: auto; text-align: center; width: 90%;" name="price_11"></td>
                 </tr>
                 <tr>
-                    <td class="left"><input type="text" value="URBAN iphone 12" style="width: 90%;"></td>
-                    <td class="right"><input type="text" value="0x" style="margin: auto; text-align: center; width: 90%;"></td>
+                    <td class="left"><input type="text" value="RS - Moringa Oleifera" style="width: 90%;" name="product_12"></td>
+                    <td class="right"><input type="text" value="₪" style="margin: auto; text-align: center; width: 90%;" name="price_12"></td>
                 </tr>
                 <tr>
-                    <td class="left"><input type="text" value="URBAN iphone 11 ProMax" style="width: 90%;"></td>
-                    <td class="right"><input type="text" value="0x" style="margin: auto; text-align: center; width: 90%;"></td>
+                    <td class="left"><input type="text" value="RS - Pro Curcum" style="width: 90%;" name="product_13"></td>
+                    <td class="right"><input type="text" value="₪" style="margin: auto; text-align: center; width: 90%;" name="price_13"></td>
                 </tr>
                 <tr>
-                    <td class="left"><input type="text" value="URBAN iphone 11 PRO" style="width: 90%;"></td>
-                    <td class="right"><input type="text" value="0x" style="margin: auto; text-align: center; width: 90%;"></td>
+                    <td class="left"><input type="text" value="RS - Royal Test" style="width: 90%;" name="product_14"></td>
+                    <td class="right"><input type="text" value="₪" style="margin: auto; text-align: center; width: 90%;" name="price_14"></td>
                 </tr>
                 <tr>
-                    <td class="left"><input type="text" value="URBAN iphone 11" style="width: 90%;"></td>
-                    <td class="right"><input type="text" value="0x" style="margin: auto; text-align: center; width: 90%;"></td>
+                    <td class="left"><input type="text" value="RS - L-Arginine" style="width: 90%;" name="product_15"></td>
+                    <td class="right"><input type="text" value="₪" style="margin: auto; text-align: center; width: 90%;" name="price_15"></td>
                 </tr>
                 <tr>
-                    <td class="left"><input type="text" value="URBAN iphone XRMax" style="width: 90%;"></td>
-                    <td class="right"><input type="text" value="0x" style="margin: auto; text-align: center; width: 90%;"></td>
+                    <td class="left"><input type="text" value="RS - CLA 1500" style="width: 90%;" name="product_16"></td>
+                    <td class="right"><input type="text" value="₪" style="margin: auto; text-align: center; width: 90%;" name="price_16"></td>
                 </tr>
                 <tr>
-                    <td class="left"><input type="text" value="URBAN iphone XR" style="width: 90%;"></td>
-                    <td class="right"><input type="text" value="0x" style="margin: auto; text-align: center; width: 90%;"></td>
+                    <td class="left"><input type="text" value="5-HTP" style="width: 90%;" name="product_17"></td>
+                    <td class="right"><input type="text" value="₪" style="margin: auto; text-align: center; width: 90%;" name="price_17"></td>
                 </tr>
                 <tr>
-                    <td class="left"><input type="text" value="URBAN S23 ultra" style="width: 90%;"></td>
-                    <td class="right"><input type="text" value="0x" style="margin: auto; text-align: center; width: 90%;"></td>
+                    <td class="left"><input type="text" value="RS - Vitamin c500" style="width: 90%;" name="product_18"></td>
+                    <td class="right"><input type="text" value="₪" style="margin: auto; text-align: center; width: 90%;" name="price_18"></td>
                 </tr>
                 <tr>
-                    <td class="left"><input type="text" value="URBAN S23 plus" style="width: 90%;"></td>
-                    <td class="right"><input type="text" value="0x" style="margin: auto; text-align: center; width: 90%;"></td>
+                    <td class="left"><input type="text" value="RS - Creatine" style="width: 90%;" name="product_19"></td>
+                    <td class="right"><input type="text" value="₪" style="margin: auto; text-align: center; width: 90%;" name="price_19"></td>
                 </tr>
                 <tr>
-                    <td class="left"><input type="text" value="URBAN S23" style="width: 90%;"></td>
-                    <td class="right"><input type="text" value="0x" style="margin: auto; text-align: center; width: 90%;"></td>
+                    <td class="left"><input type="text" value="RS - Cocoa" style="width: 90%;" name="product_20"></td>
+                    <td class="right"><input type="text" value="₪" style="margin: auto; text-align: center; width: 90%;" name="price_20"></td>
+                </tr>
+                <tr>
+                    <td class="left"><input type="text" value="RS - RDX7" style="width: 90%;" name="product_21"></td>
+                    <td class="right"><input type="text" value="₪" style="margin: auto; text-align: center; width: 90%;" name="price_21"></td>
+                </tr>
+                <tr>
+                    <td class="left"><input type="text" value="RS - BCAA" style="width: 90%;" name="product_22"></td>
+                    <td class="right"><input type="text" value="₪" style="margin: auto; text-align: center; width: 90%;" name="price_22"></td>
+                </tr>
+                <tr>
+                    <td class="left"><input type="text" value="RS - Maca powder" style="width: 90%;" name="product_23"></td>
+                    <td class="right"><input type="text" value="₪" style="margin: auto; text-align: center; width: 90%;" name="price_23"></td>
+                </tr>
+                <tr>
+                    <td class="left"><input type="text" value="RS - R1" style="width: 90%;" name="product_24"></td>
+                    <td class="right"><input type="text" value="₪" style="margin: auto; text-align: center; width: 90%;" name="price_24"></td>
+                </tr>
+                <tr>
+                    <td class="left"><input type="text" value="RS - EAAMINO" style="width: 90%;" name="product_25"></td>
+                    <td class="right"><input type="text" value="₪" style="margin: auto; text-align: center; width: 90%;" name="price_25"></td>
+                </tr>
+                <tr>
+                    <td class="left"><input type="text" value="RS L-Carnitine 1350" style="width: 90%;" name="product_26"></td>
+                    <td class="right"><input type="text" value="₪" style="margin: auto; text-align: center; width: 90%;" name="price_26"></td>
                 </tr>
             </tbody>
             <tfoot>
@@ -122,7 +146,7 @@
     </div>
 
 
-
+<!-- 
 
 <div id="royal_case">
     <table border="1px">
@@ -348,10 +372,9 @@
     </table>
 </div>
 
-
+ -->
 <br>
     <div class="footer_part" style="margin: auto;">
-        <input type="text" style="width: 90%;height: 30px; margin: auto; text-align: right; display: block;padding-left: 10px; padding-right: 10px; color: black;" placeholder="أسم صاحب الطلبية" required>
     </div>
 <center>
     <div class="footer_part" style="margin: auto; display: block; margin: auto;">
